--- a/About me/index.html
+++ b/About me/index.html
@@ -89,7 +89,7 @@
     <!-- certifacte Section -->
     <section class="Certificate" id="Certificate">
         <div class="container">
-            <h2 class="section-title">certifacte</h2>
+            <h2 class="section-title">certificate</h2>
             <div class="Certificate-container">
                 <div class="Certificate-card">
                     <div class="Certificate-img">
